Fix overflow issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
 @import "./partials/typography.css";
 
 .ProseMirror {
-  @apply z-0 p-24 py-10 caret-black outline-0 dark:caret-white;
+  @apply z-0 caret-black outline-0 dark:caret-white md:px-14 lg:px-24 lg:py-10;
 
   & > * {
     @apply mx-auto sm:max-w-[60ch] md:max-w-[65ch] lg:max-w-[85ch];
